--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,76 +1,89 @@
 /* latin-ext */
+
 @font-face {
   font-family: "Quicksand";
   font-style: normal;
   font-weight: 300;
   font-display: swap;
-  src: url(https://fonts.gstatic.com/s/quicksand/v21/6xKtdSZaM9iE8KbpRA_hJVQNYuDyP7bh.woff2)
-    format("woff2");
-  unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB,
-    U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
+  src: url(https://fonts.gstatic.com/s/quicksand/v21/6xKtdSZaM9iE8KbpRA_hJVQNYuDyP7bh.woff2) format("woff2");
+  unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
 }
 
 /* latin */
+
 @font-face {
   font-family: "Quicksand";
   font-style: normal;
   font-weight: 300;
   font-display: swap;
-  src: url(https://fonts.gstatic.com/s/quicksand/v21/6xKtdSZaM9iE8KbpRA_hK1QNYuDyPw.woff2)
-    format("woff2");
-  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA,
-    U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215,
-    U+FEFF, U+FFFD;
+  src: url(https://fonts.gstatic.com/s/quicksand/v21/6xKtdSZaM9iE8KbpRA_hK1QNYuDyPw.woff2) format("woff2");
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
 
 /* latin-ext */
+
 @font-face {
   font-family: "Quicksand";
   font-style: normal;
   font-weight: 400;
   font-display: swap;
-  src: url(https://fonts.gstatic.com/s/quicksand/v21/6xKtdSZaM9iE8KbpRA_hJVQNYuDyP7bh.woff2)
-    format("woff2");
-  unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB,
-    U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
+  src: url(https://fonts.gstatic.com/s/quicksand/v21/6xKtdSZaM9iE8KbpRA_hJVQNYuDyP7bh.woff2) format("woff2");
+  unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
 }
 
 /* latin */
+
 @font-face {
   font-family: "Quicksand";
   font-style: normal;
   font-weight: 400;
   font-display: swap;
-  src: url(https://fonts.gstatic.com/s/quicksand/v21/6xKtdSZaM9iE8KbpRA_hK1QNYuDyPw.woff2)
-    format("woff2");
-  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA,
-    U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215,
-    U+FEFF, U+FFFD;
+  src: url(https://fonts.gstatic.com/s/quicksand/v21/6xKtdSZaM9iE8KbpRA_hK1QNYuDyPw.woff2) format("woff2");
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
 
 /* latin-ext */
+
 @font-face {
   font-family: "Quicksand";
   font-style: normal;
   font-weight: 500;
   font-display: swap;
-  src: url(https://fonts.gstatic.com/s/quicksand/v21/6xKtdSZaM9iE8KbpRA_hJVQNYuDyP7bh.woff2)
-    format("woff2");
-  unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB,
-    U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
+  src: url(https://fonts.gstatic.com/s/quicksand/v21/6xKtdSZaM9iE8KbpRA_hJVQNYuDyP7bh.woff2) format("woff2");
+  unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
 }
 
 /* latin */
+
 @font-face {
   font-family: "Quicksand";
   font-style: normal;
   font-weight: 500;
   font-display: swap;
-  src: url(https://fonts.gstatic.com/s/quicksand/v21/6xKtdSZaM9iE8KbpRA_hK1QNYuDyPw.woff2)
-    format("woff2");
-  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA,
-    U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215,
-    U+FEFF, U+FFFD;
+  src: url(https://fonts.gstatic.com/s/quicksand/v21/6xKtdSZaM9iE8KbpRA_hK1QNYuDyPw.woff2) format("woff2");
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+}
+
+/* latin-ext */
+
+@font-face {
+  font-family: "Quicksand";
+  font-style: normal;
+  font-weight: 700;
+  font-display: swap;
+  src: url(https://fonts.gstatic.com/s/quicksand/v21/6xKtdSZaM9iE8KbpRA_hJVQNYuDyP7bh.woff2) format("woff2");
+  unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
+}
+
+/* latin */
+
+@font-face {
+  font-family: "Quicksand";
+  font-style: normal;
+  font-weight: 700;
+  font-display: swap;
+  src: url(https://fonts.gstatic.com/s/quicksand/v21/6xKtdSZaM9iE8KbpRA_hK1QNYuDyPw.woff2) format("woff2");
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
 
 :root {
@@ -79,16 +92,11 @@
   --breakpoint-md: 768px;
   --breakpoint-lg: 992px;
   --breakpoint-xl: 1200px;
-  --font-family-sans-serif: -apple-system, BlinkMacSystemFont, "Segoe UI",
-    Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif,
-    "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-  --font-family-monospace: SFMono-Regular, Menlo, Monaco, Consolas,
-    "Liberation Mono", "Courier New", monospace;
+  --font-family-sans-serif: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  --font-family-monospace: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
 }
 
-*,
-::after,
-::before {
+*, ::after, ::before {
   box-sizing: border-box;
 }
 
@@ -99,18 +107,13 @@ html {
   -webkit-tap-highlight-color: transparent;
 }
 
-footer,
-header,
-main,
-nav {
+footer, header, main, nav {
   display: block;
 }
 
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-    "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji",
-    "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   font-size: 1rem;
   font-weight: 400;
   line-height: 1.5;
@@ -119,10 +122,7 @@ body {
   background-color: #fff;
 }
 
-h1,
-h2,
-h3,
-h4 {
+h1, h2, h3, h4 {
   margin-top: 0;
   margin-bottom: 0.5rem;
 }
@@ -140,7 +140,6 @@ a {
 
 a:hover {
   color: #0056b3;
-  text-decoration: underline;
 }
 
 a:not([href]):not([tabindex]) {
@@ -148,8 +147,7 @@ a:not([href]):not([tabindex]) {
   text-decoration: none;
 }
 
-a:not([href]):not([tabindex]):focus,
-a:not([href]):not([tabindex]):hover {
+a:not([href]):not([tabindex]):focus, a:not([href]):not([tabindex]):hover {
   color: inherit;
   text-decoration: none;
 }
@@ -168,96 +166,25 @@ svg {
   vertical-align: middle;
 }
 
-button {
-  border-radius: 0;
-}
-
-button:focus {
-  outline: 1px dotted;
-  outline: 5px auto -webkit-focus-ring-color;
-}
-
-button,
-input,
-textarea {
-  margin: 0;
-  font-family: inherit;
-  font-size: inherit;
-  line-height: inherit;
-}
-
-button,
-input {
-  overflow: visible;
-}
-
-button {
-  text-transform: none;
-}
-
-[type="button"],
-[type="submit"],
-button {
-  -webkit-appearance: button;
-}
-
-[type="button"]:not(:disabled),
-[type="submit"]:not(:disabled),
-button:not(:disabled) {
-  cursor: pointer;
-}
-
-[type="button"]::-moz-focus-inner,
-[type="submit"]::-moz-focus-inner,
-button::-moz-focus-inner {
-  padding: 0;
-  border-style: none;
-}
-
-textarea {
-  overflow: auto;
-  resize: vertical;
-}
-
-[type="search"] {
-  outline-offset: -2px;
-  -webkit-appearance: none;
-}
-
-[type="search"]::-webkit-search-decoration {
-  -webkit-appearance: none;
-}
-
-.h1,
-.h2,
-.h3,
-.h4,
-h1,
-h2,
-h3,
-h4 {
+.h1, .h2, .h3, .h4, h1, h2, h3, h4 {
   margin-bottom: 0.5rem;
   font-weight: 500;
   line-height: 1.2;
 }
 
-.h1,
-h1 {
+.h1, h1 {
   font-size: 2.5rem;
 }
 
-.h2,
-h2 {
+.h2, h2 {
   font-size: 2rem;
 }
 
-.h3,
-h3 {
+.h3, h3 {
   font-size: 1.75rem;
 }
 
-.h4,
-h4 {
+.h4, h4 {
   font-size: 1.5rem;
 }
 
@@ -278,14 +205,7 @@ h4 {
   margin-left: -15px;
 }
 
-.col-12,
-.col-6,
-.col-lg-3,
-.col-lg-6,
-.col-md-10,
-.col-md-3,
-.col-md-8,
-.col-sm-4 {
+.col-12, .col-6, .col-lg-3, .col-lg-6, .col-md-10, .col-md-3, .col-md-8, .col-sm-4 {
   position: relative;
   width: 100%;
   padding-right: 15px;
@@ -403,9 +323,7 @@ h4 {
 }
 
 @media print {
-  *,
-  ::after,
-  ::before {
+  *, ::after, ::before {
     text-shadow: none !important;
     box-shadow: none !important;
   }
@@ -415,14 +333,11 @@ h4 {
   img {
     page-break-inside: avoid;
   }
-  h2,
-  h3,
-  p {
+  h2, h3, p {
     orphans: 3;
     widows: 3;
   }
-  h2,
-  h3 {
+  h2, h3 {
     page-break-after: avoid;
   }
   @page {
@@ -441,14 +356,6 @@ h4 {
 
 .purple {
   color: #7367f0 !important;
-}
-
-.error {
-  color: #da4167 !important;
-}
-
-.success {
-  color: #41dab4 !important;
 }
 
 /* Main */
@@ -482,37 +389,28 @@ body {
   color: #2b303a;
 }
 
-h1,
-h2,
-h3,
-h4,
-p,
-a {
+h1, h2, h3, h4, p, a {
   font-weight: 500;
   margin-top: 0;
 }
 
-h1,
-.h1 {
+h1, .h1 {
   font-size: 3em;
   font-weight: 400;
   padding: 0 64px;
 }
 
-h2,
-.h2 {
+h2, .h2 {
   font-size: 2em;
   font-weight: 400;
 }
 
-h3,
-.h3 {
+h3, .h3 {
   font-size: 1.5em;
   font-weight: 300;
 }
 
-h4,
-.h4 {
+h4, .h4 {
   font-size: 1.25em;
   font-weight: 300;
   margin: 0;
@@ -526,8 +424,16 @@ p {
   font-weight: 500;
 }
 
-a:not(:hover) {
+.bold {
+  font-weight: 700;
+}
+
+a {
   text-decoration: none;
+}
+
+code {
+  font-family: monospace !important;
 }
 
 @media (max-width: 1199.98px) {
@@ -535,23 +441,19 @@ a:not(:hover) {
     font-size: 1em;
     text-align: justify;
   }
-  h1,
-  .h1 {
+  h1, .h1 {
     font-size: 2.5em;
     padding: 0 32px;
   }
-  h2,
-  .h2 {
+  h2, .h2 {
     font-size: 1.5em;
     font-weight: 400;
   }
-  h3,
-  .h3 {
+  h3, .h3 {
     font-size: 1.25em;
     font-weight: 400;
   }
-  h4,
-  .h4 {
+  h4, .h4 {
     font-size: 1em;
     font-weight: 400;
   }
@@ -561,19 +463,14 @@ a:not(:hover) {
   .about {
     font-size: 0.825em;
   }
-  h1,
-  .h1 {
+  h1, .h1 {
     font-size: 2em;
     padding: 0 16px;
   }
-  h2,
-  .h2 {
+  h2, .h2 {
     font-size: 1.25em;
   }
-  h3,
-  .h3,
-  h4,
-  .h4 {
+  h3, .h3, h4, .h4 {
     font-size: 1em;
   }
 }
@@ -646,110 +543,8 @@ a:not(:hover) {
   padding: 8px;
 }
 
-.fadein {
-  animation: fadeIn 700ms ease forwards;
-}
-
-.fadeout {
-  animation: fadeOut 700ms ease forwards;
-}
-
-@keyframes fadeIn {
-  from {
-    opacity: 0;
-  }
-  to {
-    opacity: 1;
-  }
-}
-
-@keyframes fadeOut {
-  from {
-    opacity: 1;
-  }
-  to {
-    opacity: 0;
-  }
-}
-
 .icon-link:hover {
   opacity: 0.9;
-}
-
-input,
-textarea {
-  height: 100%;
-  font-weight: 500;
-  padding: 4px 4px 4px 8px;
-  width: 100%;
-  font-size: 1em;
-  border: 2px solid #616d83;
-  border-radius: 4px;
-  min-height: 2.5em;
-}
-
-textarea {
-  min-height: 4em;
-}
-
-input:focus,
-textarea:focus {
-  border-color: #7367f0;
-  outline: none;
-}
-
-button {
-  font-weight: 500;
-  padding: 4px 8px;
-  font-size: 1em;
-  border-radius: 4px;
-  border: none;
-  -webkit-box-shadow: 0 4px 9px 0 rgba(43, 48, 58, 0.11);
-  box-shadow: 0 4px 9px 0 rgba(43, 48, 58, 0.11);
-  cursor: pointer;
-}
-
-button:disabled {
-  opacity: 0.8;
-  -webkit-box-shadow: none !important;
-  box-shadow: none !important;
-  cursor: not-allowed;
-}
-
-button:not(:disabled):hover {
-  -webkit-box-shadow: 0 6px 18px 0 rgba(43, 48, 58, 0.14);
-  box-shadow: 0 6px 18px 0 rgba(43, 48, 58, 0.14);
-  opacity: 0.9;
-  -webkit-transform: translateY(-1px);
-  -moz-transform: translateY(-1px);
-  -o-transform: translateY(-1px);
-  transform: translateY(-1px);
-}
-
-button:not(:disabled):active {
-  outline: none;
-}
-
-button.pink {
-  background-color: #ce9ffc;
-  color: white !important;
-}
-
-button.purple {
-  background-color: #7367f0;
-  color: white !important;
-}
-
-.input {
-  margin: 16px;
-}
-
-.input .error {
-  display: block;
-  position: absolute;
-  font-size: 0.75em;
-  margin: -5px 0;
-  right: 15px;
 }
 
 .card {
@@ -813,13 +608,11 @@ button.purple {
 
 /* iOS Safari fix */
 
-.card:active .card-img-overlay,
-.card:focus .card-img-overlay {
+.card:active .card-img-overlay, .card:focus .card-img-overlay {
   opacity: 1;
 }
 
-.card:focus .card-img,
-.card:active .card-img {
+.card:focus .card-img, .card:active .card-img {
   filter: blur(6px);
 }
 
